# ADC_3.0.5

./: .gitignore  ADC_3_0_5.ipynb  README.md
saas/apps/api/: Dockerfile  README.md  pyproject.toml
saas/apps/api/alembic/: README.md
saas/apps/api/app/: __init__.py  main.py  security.py
saas/apps/api/app/core/: __init__.py  config.py
saas/apps/api/app/db/: __init__.py  session.py
saas/apps/api/app/models/: __init__.py
saas/apps/api/core/: __init__.py  broker_sim.py  data_loader.py  indicators.py  lstm_model.py
saas/apps/api/tests/: factories.py  test_api_contracts.py  test_app_startup.py  test_auth_and_dashboard.py  test_broker_interface.py  test_broker_orders_api.py  test_dashboard_metrics_service.py  test_data_loader.py  test_data_providers.py  test_indicators.py  test_indicators_endpoint.py  test_lstm_endpoint.py  test_main.py  test_market_data_endpoint.py  test_market_data_provider_selection.py  test_market_stream_endpoint.py  test_metrics_service.py  test_models_and_schemas.py  test_mvp_route_contracts.py  test_mvp_smoke_flow.py  test_notifications.py  test_orders.py  test_pivot_env_optional_dependency.py  test_rl_endpoint.py  test_rl_trainer.py  test_sessions_endpoint.py  test_settings_defaults.py  test_settings_endpoints.py  test_signal_engine.py  test_signal_engine_rules.py  test_signals_generate_api.py  test_simulation_runner.py  test_simulations_endpoint.py  test_strategy_parameters_endpoint.py  test_strategy_settings.py  test_trade_journal.py  test_trade_journal_endpoint.py  test_trades.py  test_trades_mvp_api.py  test_trading_endpoints.py
(+159 files in other folders)
