[project]
name = "adc-saas-api"
version = "0.1.0"
description = "Backend API for the ADC SaaS platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "celery==5.3.4",
    "redis==5.0.1",
    "yfinance==0.2.32",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "scikit-learn==1.3.2",
    "tensorflow==2.14.0",
    "ta==0.10.2",
    "stable-baselines3==2.2.1",
    "gymnasium==0.29.1",
    "email-validator==2.1.0",
    "jinja2==3.1.2",
    "alembic==1.12.1",
    "httpx==0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
